@@ -466,7 +466,12 @@ static int read_event_ft2(struct context_data *ctx, struct xmp_event *e, int chn
 			if (sub != NULL) {
 				int p = mod->xxc[chn].pan - 128;
 				xc->volume = sub->vol;
-				xc->pan.val = p + ((sub->pan - 128) * (128 - abs(p))) / 128 + 128;
+
+				if (!HAS_QUIRK(QUIRK_FTMOD)) {
+					xc->pan.val = p + ((sub->pan - 128) *
+						(128 - abs(p))) / 128 + 128;
+				}
+
 				xc->ins_fade = mod->xxi[xc->ins].rls;
 				SET(NEW_VOL);
 			}
@@ -521,7 +526,12 @@ static int read_event_ft2(struct context_data *ctx, struct xmp_event *e, int chn
 			if (sub != NULL) {
 				int p = mod->xxc[chn].pan - 128;
 				xc->volume = sub->vol;
-				xc->pan.val = p + ((sub->pan - 128) * (128 - abs(p))) / 128 + 128;
+
+				if (!HAS_QUIRK(QUIRK_FTMOD)) {
+					xc->pan.val = p + ((sub->pan - 128) *
+						(128 - abs(p))) / 128 + 128;
+				}
+
 				xc->ins_fade = mod->xxi[xc->ins].rls;
 			} else {
 				xc->volume = 0;
